src/df_vector/snapshots/pq_vector__df_vector__tests__vector_topk_filter_plan_tree.snap
---
source: src/df_vector/tests.rs
expression: tree_str
---
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│           id: id          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       VectorTopKExec      │
│    --------------------   │
│     batches_fetched: 1    │
│        column: vec        │
│   embeddings_fetched: 3   │
│            k: 2           ├──────────────┐
│         nprobe: 64        │              │
│        query_dim: 2       │              │
│                           │              │
│        vector_topk        │              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│    VectorIndexScanExec    ││         FilterExec        │
│    --------------------   ││    --------------------   │
│     candidate_rows: 6     ││     predicate: id >= 3    │
│          files: 1         ││                           │
│      files_scanned: 1     ││                           │
│                           ││                           │
│     vector_index_scan     ││                           │
└───────────────────────────┘└─────────────┬─────────────┘
                             ┌─────────────┴─────────────┐
                             │      RepartitionExec      │
                             │    --------------------   │
                             │ partition_count(in->out): │
                             │           1 -> 2          │
                             │                           │
                             │    partitioning_scheme:   │
                             │     RoundRobinBatch(2)    │
                             └─────────────┬─────────────┘
                             ┌─────────────┴─────────────┐
                             │       DataSourceExec      │
                             │    --------------------   │
                             │          files: 1         │
                             │      format: parquet      │
                             │     predicate: id >= 3    │
                             └───────────────────────────┘
