src/df_vector/snapshots/pq_vector__df_vector__tests__vector_topk_plan_tree.snap
---
source: src/df_vector/tests.rs
expression: tree_str
---
┌───────────────────────────┐
│       VectorTopKExec      │
│    --------------------   │
│     batches_fetched: 1    │
│     candidate_rows: 6     │
│        column: vec        │
│   embeddings_fetched: 4   │
│      index_used: true     │
│            k: 2           │
│         nprobe: 64        │
│        query_dim: 2       │
│                           │
│        vector_topk        │
└───────────────────────────┘
