src/df_vector/snapshots/pq_vector__df_vector__tests__vector_topk_vldb_tree.snap
---
source: src/df_vector/tests.rs
expression: tree_str
---
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│        title: title       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       VectorTopKExec      │
│    --------------------   │
│     batches_fetched: 1    │
│    candidate_rows: 396    │
│     column: embedding     │
│                           │
│    embeddings_fetched:    │
│            396            │
│                           │
│      index_used: true     │
│            k: 3           │
│    max_candidates: 2048   │
│         nprobe: 32        │
│      query_dim: 4096      │
│                           │
│        vector_topk        │
└───────────────────────────┘
